More file filter unit tests; add G1 gc command args for shell scripts in testenterprise directory.